# coriolis

./: Cargo.toml  ModbusMap.csv  README.md  config copy.yml  config.yml  data.csv
examples/: modbus-rtu-generic.rs  modbus-rtu.rs
src/: lib.rs  mock.rs  setup.rs
src/buildmap/: mod.rs
src/core/: mod.rs
src/core/modbus/: mod.rs  rtu.rs
src/modbus/: mod.rs  rtu.rs
