[package]
name = "coriolis"
description = "Drivers Coriolis Transmitter"
version = "0.1.0"
authors = ["m_sha256"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["sensor", "flow", "transmitter", "coriolis", "modbus"]
categories = ["hardware-support", "network-programming", "asynchronous"]

repository = "https://github.com/"
edition = "2018"

[dependencies]
byteorder = "1.4.3"
csv = "1.2.0"
futures = { version = "0.1", optional = true }
log = { version = "~0.4", default-features = false }
serde = "1.0.152"
serialport = { version = "3", default-features = false, optional = true }
tokio = { version = "0.1", optional = true }
tokio-core = { version = "0.1", optional = true }
tokio-io = { version = "0.1", optional = true }
tokio-modbus = {version = "~0.3.2", optional = true }
tokio-serial = { version = "3", default-features = false, optional = true }

[dev-dependencies]
chrono = "~0.4"
env_logger = "~0.6"
stream-cancel = "~0.4"

[features]
default = ["tokio-modbus-rtu"]
tokio-modbus-rtu = ["std", "modbus", "rtu", "tokio-modbus", "tokio", "tokio-core", "tokio-io", "tokio-serial"]
tokio-mock = ["tokio"]
modbus = []
rtu = ["serialport"]
std = ["futures"]

